# gradient-academy-dumper

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/api/: __init__.py  client.py  models.py
src/db/: __init__.py  manager.py
src/downloader/: __init__.py  video.py
src/scraper/: __init__.py  courses.py  subchapters.py
src/utils/: __init__.py  concurrency.py  console.py
